// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParseLineStream should handle error 1`] = `
Object {
  "accessType": "RX",
  "applNo": 204508,
  "applType": "ORIGINAL",
  "applicant": "BAXTER HLTHCARE CORP",
  "applicantFullName": "HOSPIRA INC",
  "approvalDate": 2013-10-02T21:00:00.000Z,
  "dosageForm": "EMULSION",
  "ingredients": Array [
    "OLIVE OIL",
    "SOYBEAN OIL",
  ],
  "productNo": 1,
  "rld": true,
  "route": "INTRAVENOUS",
  "rs": true,
  "strength": Array [
    "16%(160GM/1000ML)",
    "4%  (40GM/1000ML)",
  ],
  "teCode": "",
  "tradeName": "CLINOLIPID 20%",
}
`;

exports[`ParseLineStream should parse a line with braces in single ingredient 1`] = `
Object {
  "accessType": "RX",
  "applNo": 21626,
  "applType": "ORIGINAL",
  "applicant": "HEYL CHEMISCH",
  "applicantFullName": "HEYL CHEMISCH PHARMAZEUTISHE FABRIK",
  "approvalDate": 2003-10-01T21:00:00.000Z,
  "dosageForm": "CAPSULE",
  "ingredients": Array [
    "FERRIC HEXACYANOFERRATE(II)",
  ],
  "productNo": 1,
  "rld": true,
  "route": "ORAL",
  "rs": true,
  "strength": Array [
    "500MG",
  ],
  "teCode": "",
  "tradeName": "RADIOGARDASE (PRUSSIAN BLUE)",
}
`;

exports[`ParseLineStream should parse a line with complex ingredients 1`] = `
Object {
  "accessType": "RX",
  "applNo": 20725,
  "applType": "ORIGINAL",
  "applicant": "ABBVIE",
  "applicantFullName": "ABBVIE INC",
  "approvalDate": 2009-04-29T21:00:00.000Z,
  "dosageForm": "CAPSULE, DELAYED RELEASE",
  "ingredients": Array [
    "AMYLASE",
    "LIPASE",
    "PROTEASE",
  ],
  "productNo": 2,
  "rld": true,
  "route": "ORAL",
  "rs": false,
  "strength": Array [
    "60,000USP UNITS",
    "12,000USP UNITS",
    "38,000USP UNITS",
  ],
  "teCode": "",
  "tradeName": "CREON",
}
`;

exports[`ParseLineStream should parse a line with complex strength 1`] = `
Object {
  "accessType": "DISCN",
  "applNo": 79138,
  "applType": "GENERIC",
  "applicant": "HOSPIRA",
  "applicantFullName": "HOSPIRA INC",
  "approvalDate": 2003-10-01T21:00:00.000Z,
  "dosageForm": "INJECTABLE",
  "ingredients": Array [
    "ARTICAINE HYDROCHLORIDE",
    "EPINEPHRINE BITARTRATE",
  ],
  "productNo": 1,
  "rld": false,
  "route": "INJECTION",
  "rs": false,
  "strength": Array [
    "4%",
    "EQ 0.01MG BASE/ML",
  ],
  "teCode": "",
  "tradeName": "ARTICAINE HYDROCHLORIDE AND EPINEPHRINE BITARTRATE",
}
`;

exports[`ParseLineStream should parse a line with complex strength with brackets 1`] = `
Object {
  "accessType": "RX",
  "applNo": 204508,
  "applType": "ORIGINAL",
  "applicant": "BAXTER HLTHCARE CORP",
  "applicantFullName": "HOSPIRA INC",
  "approvalDate": 2013-10-02T21:00:00.000Z,
  "dosageForm": "EMULSION",
  "ingredients": Array [
    "OLIVE OIL",
    "SOYBEAN OIL",
  ],
  "productNo": 1,
  "rld": true,
  "route": "INTRAVENOUS",
  "rs": true,
  "strength": Array [
    "16%(160GM/1000ML)",
    "4%  (40GM/1000ML)",
  ],
  "teCode": "",
  "tradeName": "CLINOLIPID 20%",
}
`;

exports[`ParseLineStream should parse one line of data 1`] = `
Object {
  "accessType": "RX",
  "applNo": 205613,
  "applType": "ORIGINAL",
  "applicant": "VALEANT PHARMS INTL",
  "applicantFullName": "VALEANT PHARMACEUTICALS INTERNATIONAL",
  "approvalDate": 2014-10-06T21:00:00.000Z,
  "dosageForm": "AEROSOL, FOAM",
  "ingredients": Array [
    "BUDESONIDE",
  ],
  "productNo": 1,
  "rld": true,
  "route": "RECTAL",
  "rs": true,
  "strength": Array [
    "2MG/ACTUATION",
  ],
  "teCode": "",
  "tradeName": "UCERIS",
}
`;

exports[`ParseLineStream should remove federal note from strength 1`] = `
Object {
  "accessType": "DISCN",
  "applNo": 22411,
  "applType": "ORIGINAL",
  "applicant": "ANGELINI PHARMA",
  "applicantFullName": "ANGELINI PHARMA INC",
  "approvalDate": 2010-02-01T22:00:00.000Z,
  "dosageForm": "TABLET, EXTENDED RELEASE",
  "ingredients": Array [
    "TRAZODONE HYDROCHLORIDEL",
  ],
  "productNo": 1,
  "rld": true,
  "route": "ORAL",
  "rs": false,
  "strength": Array [
    "150MG",
  ],
  "teCode": "",
  "tradeName": "OLEPTRO",
}
`;
